[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyqwe"
description = 'Run commands set in the pyproject.toml file'
authors = [{ name = "David Carmichael", email = "david@uilix.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]

[project.scripts]
pyqwe = "pyqwe:main"

[project.urls]
Source = "https://github.com/CheeseCake87/pyqwe"

[project.optional-dependencies]
dotenv = ["pyqwe-extra-dotenv"]

[tool.pyqwe]
cmd_mod_flask = "*:flask --app flask_example/module.py run"
cmd_pac_flask = "*:flask --app flask_example/package run --port {{PORT}} --host {{HOST}}"
mod_flask = "flask_example.module:run"
pac_flask = "flask_example.package:run"
format = "*:ruff format pyqwe"
build = "*shell:flit build"
publish = "*shell:export FLIT_USERNAME=__token__ && flit publish"